fix footer alignment

--- a/resources/assets/sass/_vestidos_header_footer.scss
+++ b/resources/assets/sass/_vestidos_header_footer.scss
@@ -178,16 +178,16 @@ margin:10px 0px;
     padding: 10px 0px;
 }
 .vesti-footer-section-1 .footer-top-col:not(:last-child){
-    text-align:left !important;
+    text-align:left;
 }
 .vesti-footer-section-1 .footer-top-col:last-child{
-    text-align:right !important;
+    text-align:right;
 }
 .vesti-footer-section-2 .footer-bottom-col:first-child{
-    text-align:center !important;
+    text-align:center;
 }
 .vesti-footer-section-2 .footer-bottom-col:last-child{
-    text-align:right !important;
+    text-align:right;
 }
 .nav-list{
     padding-left: 0;
